# ChangeLog for dev-util/kdevelop
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.229 2012/04/14 23:31:20 johu Exp $

*kdevelop-4.3.1 (14 Apr 2012)

  14 Apr 2012; Johannes Huber <johu@gentoo.org> +kdevelop-4.3.1.ebuild:
  Version bump.

*kdevelop-4.3.0 (12 Mar 2012)

  12 Mar 2012; Johannes Huber <johu@gentoo.org> +kdevelop-4.3.0.ebuild:
  Version bump.

  11 Mar 2012; Agostino Sarubbo <ago@gentoo.org> kdevelop-4.2.3.ebuild:
  Stable for amd64, wrt bug #368739

  18 Feb 2012; Maciej Mrozowski <reavertm@gentoo.org> kdevelop-4.2.3.ebuild:
  QMake is no longer being supported.

  20 Nov 2011; Andreas K. Huettel <dilfridge@gentoo.org> kdevelop-4.2.2.ebuild,
  kdevelop-4.2.3.ebuild:
  Remove subversion-1.7 blocker again, as this is now hopefully fixed in
  kdevplatform

  30 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org> kdevelop-4.2.2.ebuild,
  kdevelop-4.2.3.ebuild:
  Block subversion-1.7 because of bug 388029

*kdevelop-4.2.3 (29 Jun 2011)

  29 Jun 2011; Maciej Mrozowski <reavertm@gentoo.org> +kdevelop-4.2.3.ebuild:
  Version bump, bug 373485

  01 Jun 2011; Brent Baude <ranger@gentoo.org> kdevelop-4.2.2.ebuild:
  Marking kdevelop-4.2.2 ppc stable for bug 354033

  11 May 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kdevelop-4.0.2.ebuild:
  Remove old

  09 May 2011; Markos Chandras <hwoarang@gentoo.org> kdevelop-4.2.2.ebuild:
  Stable on amd64 wrt bug #354033

  09 May 2011; Thomas Kahle <tomka@gentoo.org> kdevelop-4.2.2.ebuild:
  x86 stable per bug 354033

  08 May 2011; Andreas K. Huettel <dilfridge@gentoo.org> kdevelop-4.2.2.ebuild:
  Restrict tests for the moment, see bug 366471

  12 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  kdevelop-4.2.2.ebuild:
  Fixed linguas list, bug 359521

*kdevelop-4.2.2 (10 Apr 2011)

  10 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> -kdevelop-4.1.2.ebuild,
  -kdevelop-4.2.0.ebuild, +kdevelop-4.2.2.ebuild: