@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevplatform/kdevplatform-1.2.3.ebuild,v 1.4 2012/03/31 10:24:26 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevplatform/kdevplatform-1.2.3.ebuild,v 1.5 2012/04/22 12:06:49 maekke Exp $
 
 EAPI=4
 
@@ -14,7 +14,7 @@ inherit kde4-base
 
 DESCRIPTION="KDE development support libraries and apps"
 
-KEYWORDS="amd64 ~ppc ~ppc64 ~x86"
+KEYWORDS="amd64 ~ppc ~ppc64 x86"
 # Moved to playground for now
 # bazaar kompare mercurial
 LICENSE="GPL-2 LGPL-2"
