@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/kdevplatform
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevplatform/ChangeLog,v 1.64 2012/04/14 23:25:12 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevplatform/ChangeLog,v 1.65 2012/04/22 12:06:49 maekke Exp $
+
+  22 Apr 2012; Markus Meier <maekke@gentoo.org> kdevplatform-1.2.3.ebuild:
+  x86 stable, bug #368739
 
 *kdevplatform-1.3.1 (14 Apr 2012)
 
